--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 .app {
   height: 100vh;
   display: flex;
-  background-color: rgb(32, 87, 87);
+  background-color: rgb(32, 40, 87);
   color: white;
 }
 
@@ -52,10 +52,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 20px;
 }
 
 .money_item.active {
-  background-color: yellowgreen;
+  background-color: rgb(205, 50, 50);
 }
 .money {
   list-style: none;
@@ -68,6 +69,10 @@
   align-items: center;
   padding: 5px;
   border-radius: 5px;
+}
+.money_item span {
+  font-size: 20px;
+  margin-top: 5px;
 }
 .money_item_number {
   font-size: 17px;
@@ -105,10 +110,10 @@
 }
 
 .answer.correct {
-  animation: correct 3s ease-in forwards;
+  animation: correct 2s ease-in forwards;
 }
 .answer.wrong {
-  animation: wrong 3s ease-in forwards;
+  animation: wrong 2s ease-in forwards;
 }
 
 @keyframes correct {
@@ -163,13 +168,14 @@
   margin: 0 auto;
   border: 2px solid white;
   border-radius: 7px;
-  background-color: rgba(128, 128, 128, 0.5);
-  color: rgb(15, 229, 236);
+  background: linear-gradient(rgb(80, 35, 80), black);
+  color: white;
   padding: 50px 80px;
+  text-align: center;
 }
 
 .inputFull {
-  background-color: darkblue;
+  background-color: rgb(15, 15, 53);
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -198,4 +204,22 @@
   font-size: 20px;
   margin: 30px auto;
   display: block;
+}
+
+.restartBtn {
+  text-align: center;
+  padding: 10px 60px;
+  position: absolute;
+  top: 40%;
+  right: 0%;
+  transform: translate(-50%, -50%);
+  font-size: 18px;
+  background-color: green;
+  font-weight: 300;
+  color: white;
+  border-radius: 7px;
+}
+
+.restartBtn:hover {
+  background-color: rgba(0, 128, 0, 0.726);
 }
