--- a/src/App.css
+++ b/src/App.css
@@ -208,11 +208,8 @@
 
 .restartBtn {
   text-align: center;
-  padding: 10px 60px;
-  position: absolute;
-  top: 40%;
-  right: 0%;
-  transform: translate(-50%, -50%);
+  padding: 10px 30px;
+  margin: 20px auto;
   font-size: 18px;
   background-color: green;
   font-weight: 300;
@@ -222,4 +219,40 @@
 
 .restartBtn:hover {
   background-color: rgba(0, 128, 0, 0.726);
+}
+
+@media screen and (max-width: 567px) {
+  .app {
+    font-size: 10px;
+  }
+  .answers {
+    font-size: 14px;
+    margin: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .answer {
+    font-size: 13px;
+  }
+  .question {
+    font-size: 14px;
+  }
+  .restartBtn {
+    font-size: 12px;
+    padding: 10px 10px;
+    width: 25vw;
+    margin-right: 50px;
+    text-align: center;
+  }
+  .money_item span {
+    font-size: 11px;
+  }
+  .earnedMoneyBox {
+    font-size: 6px;
+    padding: 10px 10px;
+  }
+  .moneyList {
+    width: 35vw;
+  }
 }
